Backend-Anpassungen um auch User ohne OU aufzulisten